# Robotarmproject

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/piper_bringup/lib/piper_bringup/: detection_node.py  ik_pick_and_place.py  pick_and_place.py
install/piper_bringup/share/ament_index/resource_index/parent_prefix_path/: piper_bringup
install/piper_bringup/share/piper_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/piper_bringup/share/piper_bringup/cmake/: ament_cmake_export_dependencies-extras.cmake
install/piper_bringup/share/piper_bringup/launch/: gazebo_piper.launch.py  pick_place_launch.py  piper.launch.xml
install/piper_bringup/share/piper_bringup/models/cylinder/: model.sdf
install/piper_bringup/share/piper_bringup/worlds/: empty_world.sdf
install/piper_description/share/piper_description/: local_setup.sh  package.sh
install/piper_description/share/piper_description/config/: initial_positions.yaml
install/piper_description/share/piper_description/meshes/: MESH_LICENSE  base_link.dae  gripper_base_link.dae  left_finger.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  right_finger.dae
install/piper_description/share/piper_description/rviz/: robot_urdf.rviz
install/piper_description/share/piper_description/urdf/: piper.ros2_control.xacro  piper.urdf.xacro  piper_arm_macro.xacro
install/piper_moveit_config/share/piper_moveit_config/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/piper_moveit_config/share/piper_moveit_config/config/: joint_limits.yaml  move_group.yaml
install/piper_moveit_config/share/piper_moveit_config/launch/: demo.launch.xml
install/scene_graph_interfaces/include/scene_graph_interfaces/scene_graph_interfaces/msg/: rosidl_generator_cpp__visibility_control.hpp
install/scene_graph_interfaces/include/scene_graph_interfaces/scene_graph_interfaces/msg/detail/: fun_object3_d_bounding_box__builder.hpp  fun_object3_d_bounding_box__description.c  fun_object3_d_bounding_box__functions.c  fun_object3_d_bounding_box__rosidl_typesupport_fastrtps_cpp.hpp  fun_object3_d_bounding_box__struct.h  fun_object3_d_bounding_box__struct.hpp  fun_object3_d_bounding_box__type_support.cpp  fun_object3_d_bounding_box__type_support.h  fun_object3_d_bounding_box_list__functions.c  fun_object3_d_bounding_box_list__rosidl_typesupport_fastrtps_c.h  fun_object3_d_bounding_box_list__rosidl_typesupport_fastrtps_cpp.hpp  fun_object3_d_bounding_box_list__rosidl_typesupport_introspection_c.h  fun_object3_d_bounding_box_list__type_support.cpp  fun_object3_d_bounding_box_list__type_support.h  fun_object3_d_bounding_box_list__type_support.hpp
install/scene_graph_interfaces/share/scene_graph_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scene_graph_interfaces/share/scene_graph_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  export_scene_graph_interfaces__rosidl_generator_cExport.cmake  export_scene_graph_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  scene_graph_interfacesConfig.cmake  scene_graph_interfaces__rosidl_typesupport_cExport-noconfig.cmake  scene_graph_interfaces__rosidl_typesupport_cExport.cmake  scene_graph_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  scene_graph_interfaces__rosidl_typesupport_cppExport.cmake  scene_graph_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  scene_graph_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/scene_graph_interfaces/share/scene_graph_interfaces/msg/: FunObject3DBoundingBox.json  FunObject3DBoundingBox.msg  FunObject3DBoundingBoxList.idl  FunObject3DBoundingBoxList.json  FunObject3DBoundingBoxList.msg
log/: latest_build
src/piper_ros2/: README.md
src/piper_ros2/piper_bringup/: CMakeLists.txt
src/piper_ros2/piper_bringup/models/cube/: model.config  model.sdf
src/piper_ros2/piper_bringup/models/cylinder/: model.config
src/piper_ros2/piper_bringup/rviz/: robotmodel.rviz
src/piper_ros2/piper_bringup/scripts/: test_fk.py
src/piper_ros2/piper_bringup/src/: moveit_pick_and_place.cpp  moveit_pick_and_place1.cpp
src/piper_ros2/piper_description/: CMakeLists.txt
src/piper_ros2/piper_description/config/: gz_controllers.yaml  mock_controllers.yaml
src/piper_ros2/piper_description/launch/: view_urdf.launch.xml
src/piper_ros2/piper_description/meshes/: base_link.dae  gripper_base_link.dae  left_finger.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  right_finger.dae
src/piper_ros2/piper_description/urdf/: piper.gazebo.xacro  piper_gripper_macro.xacro  piper_macro.xacro
src/piper_ros2/piper_moveit_config/: CMakeLists.txt
src/piper_ros2/piper_moveit_config/config/: kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  piper.srdf.xacro
src/scene_graph_interfaces/: CMakeLists.txt
